@@ -36,7 +36,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static jdk.internal.jshell.tool.JShellTool.RECORD_SEPARATOR;
 import static jdk.internal.jshell.tool.JShellTool.getResource;
 import static jdk.internal.jshell.tool.JShellTool.readResource;
@@ -276,7 +275,7 @@ class Startup {
     static Startup fromFileList(List<String> fns, String context, MessageHandler mh) {
         List<StartupEntry> entries = fns.stream()
                 .map(fn -> readFile(fn, context, mh))
-                .collect(toList());
+                .toList();
         if (entries.stream().anyMatch(sue -> sue == null)) {
             return null;
         }
